--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             submitButton.disabled = true;
             chatInput.disabled = true;
 
-            const apiKey = ""; // API key is provided by the environment
+            const apiKey = "AIzaSyCfGj-O5QwIxorqqHE5NQZXZdFGSM5LuNs"; // API key is provided by the environment
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
             const payload = {
