--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
             submitButton.disabled = true;
             chatInput.disabled = true;
 
-            const apiKey = "AIzaSyCfGj-O5QwIxorqqHE5NQZXZdFGSM5LuNs"; // API key is provided by the environment
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
+            const tada = "AIzaSyCfGj-O5QwIxorqqHE5NQZXZdFGSM5LuNs"; // API key is provided by the environment
+            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${tada}`;
 
             const payload = {
                 contents: [{ parts: [{ text: userQuery }] }],
