--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
             
             chatHistory.push({ role: "user", parts: [{ text: userQuery }] });
 
-            const apiKey = ""; // API key is provided by the environment
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
+            const tada = "AIzaSyCfGj-O5QwIxorqqHE5NQZXZdFGSM5LuNs"; 
+            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${tada}`;
 
             const payload = {
                 contents: chatHistory,
